fix z-index on captions allowing links to be clicked

--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,11 @@ h2 {
     border-radius: 5px;
     font-size: 2.5rem;
 }
+
+.carousel-inner > .item {
+    z-index: auto;
+}
+
 .carousel .item {
   /*height: 500px;*/
 }
